--- a/templates/base.html
+++ b/templates/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
     <head>
-        <meta charset="utf-8">
+        <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="infantinho" content="Portal pedagógico dos alunos do pré-escolar e do 1.º Ciclo do Colégio Infante D. Henrique">
@@ -9,7 +9,7 @@
         <meta name="author" content="prof.igor@colegioinfante.info">
         <meta name="google-site-verification" content="ytetT08va-04c2ms-jxEVxO-OnPbrxT3Dl1IpSsSv4E" />
 
-        <title>infantinho.xyz</title>
+        <title>blog infantinho</title>
 
         {% load staticfiles %}
         <!--  favicons -->
@@ -97,9 +97,9 @@ document.write(unescape("%3Cscript src='" + tlJsHost + "trustlogo/javascript/tru
                             <img src="{% static 'slogo_branco.png' %}" height="50" width="200" alt="">
                           </div>
 
-                          <span class="copy-text">Copyright &copy; 2016-2017 <a href="{% url 'index' %}">infantinho.xyz</a> &nbsp; | &nbsp;  Lema 2016/2017 &nbsp; | &nbsp;  <a href="mailto:prof.igor@colegioinfante.info">prof.igor@colegioinfante.info</a></span>
+                          <span class="copy-text">Copyright &copy; 2016-2017 <a href="{% url 'index' %}">infantinho.xyz</a> &nbsp; | &nbsp;  Lema 2017/2018 &nbsp; | &nbsp;  <a href="mailto:prof.igor@colegioinfante.info">prof.igor@colegioinfante.info</a></span>
                           <div class="footer-intro">
-                            <p>“O bem de todos, com o melhor de cada um.”</p>
+                            <p>“Conhecer e valorizar para enriquecer o amanhã.”</p>
                           </div>
                     </div><!-- /.col-md-12 -->
                   </div><!-- /.row -->
