--- a/templates/base.html
+++ b/templates/base.html
@@ -245,14 +245,14 @@ document.write(unescape("%3Cscript src='" + tlJsHost + "trustlogo/javascript/tru
             });
         </script>
         {% endverbatim %}
-        <script language="JavaScript" type="text/javascript">
+        <script type="text/javascript">
 TrustLogo("https://storage.googleapis.com/cidh1c/static/comodo_secure_seal_76x26_transp.png", "CL1", "none");
 </script>
 <a  href="https://www.instantssl.com/" id="comodoTL">Essential SSL</a>
     </body>
 </html>
 {% block bellow_html %}{% endblock bellow_html %}
-<script>
+<script type="text/javascript">
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -261,7 +261,7 @@ TrustLogo("https://storage.googleapis.com/cidh1c/static/comodo_secure_seal_76x26
   ga('create', 'UA-80320643-1', 'auto');
   ga('send', 'pageview');
 </script>
-<script>
+<script type="text/javascript">
 window.addEventListener("load", function(){
 window.cookieconsent.initialise({
   "palette": {
@@ -281,7 +281,7 @@ window.cookieconsent.initialise({
   }
 })});
 </script>
-<script>
+<script type="text/javascript">
   window.fbAsyncInit = function() {
     FB.init({
       appId      : '1694858034111220',
