editing some alt text for images

--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -72,7 +72,7 @@
                           </header><!-- /.entry-header-wrapper -->
 
                           <div class="thumb-wrapper">
-                            <img src="{{ instance.headimage.url }}" class="img-responsive" alt="" >
+                            <img src="{{ instance.headimage.url }}" class="img-responsive" alt="{{ instance }}" >
                           </div><!-- .thumb-wrapper -->
 
                           <div class="entry-content">
