--- a/blog/templates/blog/grid.html
+++ b/blog/templates/blog/grid.html
@@ -122,7 +122,7 @@
                       <article class="post-wrapper">
 
                         <div class="thumb-wrapper waves-effect waves-block waves-light">
-                          <a href="{{ obj.get_absolute_url }}"><img src="{{ obj.headimage.medium.url }}" class="img-responsive" alt="" ></a>
+                          <a href="{{ obj.get_absolute_url }}"><img src="{{ obj.headimage.medium.url }}" class="img-responsive" alt="{{ obj }}" ></a>
                           <div class="post-date">
                               {{ obj.publish|date:"d" }}<span>{{ obj.publish|date:"M" }}</span>
                           </div>
