accessibily tags editing

--- a/blog/templates/blog/grid.html
+++ b/blog/templates/blog/grid.html
@@ -10,7 +10,7 @@
             <!-- slide 1 start -->
             <li data-transition="parallaxvertical" data-slotamount="default"  data-easein="default" data-easeout="default" data-masterspeed="default"  data-thumb="{{ obj.headimage.large.url }}"  data-rotate="0"  data-fstransition="fade" data-fsmasterspeed="1500" data-fsslotamount="7" data-saveperformance="off"  data-title="{{ obj }}" data-description="{{ obj.content|striptags|safe|truncatechars_html:40 }}">
                 <!-- MAIN IMAGE -->
-                <img src="{{ obj.headimage.large.url }}"  alt=""  data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="10" class="rev-slidebg" data-no-retina>
+                <img src="{{ obj.headimage.large.url }}"  alt="{{ obj }}"  data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="10" class="rev-slidebg" data-no-retina>
                 <!-- LAYERS -->
 
                 <!-- LAYER NR. 1 -->
@@ -109,6 +109,7 @@
 
         <!-- Grid News -->
         <section class="section-padding grid-news-hover grid-blog">
+          <h1>Lista de Mensagens do Blog</h1>
             <div class="container">
             {% if messages %}
               <p><h2 class="entry-title"><small>{% include 'sms.html' %}</small></h2></p>
