--- a/templates/tmenu.html
+++ b/templates/tmenu.html
@@ -7,8 +7,8 @@
 
                         <!--logo start-->
                         <a href="{% url 'index' %}" class="logo-brand">
-                            <img class="logo-dark" src="{% static 'slogo_azul.png' %}" height="50" width="200" alt=""/>
-                            <img class="logo-light" src="{% static 'slogo_branco.png' %}" height="50" width="200" alt=""/>
+                            <img class="logo-dark" src="{% static 'slogo_azul.png' %}" height="50" width="200" alt="Blog Infantinho - Home"/>
+                            <img class="logo-light" src="{% static 'slogo_branco.png' %}" height="50" width="200" alt="Blog Infantinho - Home"/>
                         </a>
                         <!--logo end-->
 
