loading time was too long...

--- a/templates/base.html
+++ b/templates/base.html
@@ -115,11 +115,11 @@ document.write(unescape("%3Cscript src='" + tlJsHost + "trustlogo/javascript/tru
                     </ul>
                 </div><!-- /.container -->
             </div><!-- /.secondary-footer -->
+<script type="text/javascript">document.write('<a style="display:block;width:100%;height:1px;" class="aff-ad-none"></a>');window.AFF_ONLOAD = window.AFF_ONLOAD || [];window.AFF_ONLOAD.push({lkid:"13537321",affid:"10103407",size:"728*90",type:"1",language:"po",web_id:"40",version:110});var aff_s = document.createElement("script"),aff_h = document.getElementsByTagName("head")[0];aff_s.charset = "utf-8";aff_s.async = !0;aff_s.src = "https://js.affasi.com/affasi_js.min.js";aff_h.insertBefore(aff_s, aff_h.firstChild);</script>
         </footer>
         <!--footer 4 end-->
-
-
-        <!-- Preloader -->
+<!--
+        
         <div id="preloader">
           <div class="preloader-position">
             <img src="{% static 'slogo_azul.png' %}" height="50" width="200" alt="logo" >
@@ -128,8 +128,8 @@ document.write(unescape("%3Cscript src='" + tlJsHost + "trustlogo/javascript/tru
             </div>
           </div>
         </div>
-        <!-- End Preloader -->
 
+	-->
 
         <!-- jQuery -->
         <script src="{% static 'assets/js/jquery-2.1.3.min.js' %}"></script>
